# PharmaGuard

./: README.md  build.sh  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: main.py
app/api/: routes.py
app/data/: drug_rules.json
app/data/history/: PATIENT_001.json  _counter.json
app/models/: response_models.py
app/services/: history_service.py  llm_service.py  recommendation_engine.py  risk_engine.py  vcf_service.py
data/: phenotype_rules.json  phenotype_tables.json
data/history/: PATIENT_001.json
frontend/: eslint.config.js  package-lock.json  vite.config.js
frontend/src/: constants.js  index.css
frontend/src/api/: client.js  localHistory.js
frontend/src/components/: CompatibilityScore.jsx  DrugInput.jsx  ErrorState.jsx  ExportButton.jsx  FileUpload.jsx  LoadingState.jsx  MetabolismInsight.jsx  Navbar.jsx  PatientHistory.jsx  PatientInfo.jsx
frontend/src/pages/: LandingPage.css  LandingPage.jsx
services/: pgx_service.py
src/: App.jsx  main.jsx
src/api/: client.js
src/components/: ClinicalRecommendation.jsx  ConfidenceExplanationCard.jsx  DrugSuggestions.jsx  EmptyState.jsx  GeneCoverage.jsx  PatientHistory.jsx  RawJsonViewer.jsx  RiskAnalysis.jsx  RiskBadge.jsx
src/context/: ThemeContext.jsx
utils/: validators.py
